--- a/LANDINGPAGE FOR CHECKING/filmss.html
+++ b/LANDINGPAGE FOR CHECKING/filmss.html
@@ -57,7 +57,7 @@
 
 	<div class="left">
 		<a href="#Scifi">
-		<img src ="https://m.media-amazon.com/images/W/IMAGERENDERING_521856-T1/images/I/A1JVqNMI7UL._SL1500_.jpg" style="width:70%">
+		<img src ="https://mirandarenzoitad.github.io/UpdatedLandingPage/LANDINGPAGE%20FOR%20CHECKING/home.html" style="width:70%">
 		</a>
 		<h2 class= "category"> SCIENCE-FICTION </h2>
 	</div>
